# NiceCLI

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  SECURITY.md  SUPPORT.md  build-windows.ps1  deny.toml
apps/nicecli/src-tauri/: Cargo.toml  build.rs  prepare-web.js  tauri.conf.json  watch-web.js
apps/nicecli/src-tauri/icons/: icon.icns
apps/nicecli/src-tauri/permissions/: allow-app-commands.json  allow-app-commands.toml  start-local-runtime.json
apps/nicecli/src-tauri/resources/: default-config.yaml
apps/nicecli/src-tauri/src/: app_identity.rs  autostart.rs  backend_launch.rs  backend_payload.rs  backend_smoke.rs  callback_server.rs  desktop_host.rs  file_export.rs  local_runtime.rs  main.rs  managed_host.rs  startup_preferences.rs  tray_host.rs  tray_smoke.rs  window_lifecycle.rs  windowing.rs
crates/nicecli-auth/: Cargo.toml
crates/nicecli-auth/src/: anthropic_login.rs  antigravity_login.rs  codex_login.rs  codex_profile.rs  gemini_cli_login.rs  gemini_web.rs  kimi_login.rs  lib.rs  oauth.rs  qwen_login.rs  vertex_import.rs
crates/nicecli-backend/: Cargo.toml
crates/nicecli-backend/src/: contract.rs  lib.rs  main.rs  server.rs
crates/nicecli-backend/src/server/: antigravity_provider.rs  claude_provider.rs  codex_provider.rs  entry_routes.rs  google_provider.rs  kimi_provider.rs  management_account.rs  management_auth.rs  management_config.rs  management_logs.rs  management_provider_config.rs  model_catalog.rs  openai_chat_provider.rs  openai_compat_provider.rs  public_api_routes.rs  public_model_routes.rs  qwen_provider.rs
crates/nicecli-backend/src/server/codex_provider/: websocket.rs
crates/nicecli-backend/src/server/google_provider/: api_keys.rs  auth_flows.rs  internal_auth.rs  internal_methods.rs  model_catalog.rs  public_action_auth_files.rs  public_action_requests.rs  public_actions.rs  public_transport.rs  response_helpers.rs
crates/nicecli-backend/src/server/model_catalog/: helpers.rs  oauth_metadata.rs
crates/nicecli-backend/src/server/openai_chat_provider/: completions.rs  model_candidates.rs  responses.rs  runtime_bridge.rs
crates/nicecli-backend/src/server/tests/: management_config_sample_routes.rs  management_cors_routes.rs  management_import_quota_routes.rs  management_login_routes.rs  management_oauth_routes.rs  management_provider_api_key_routes.rs  management_provider_config_routes.rs  management_routes.rs  management_system_routes.rs  public_codex_responses_routes.rs  public_gemini_routes.rs  public_model_catalog_routes.rs  public_oauth_provider_routes.rs
crates/nicecli-contract-tests/: Cargo.toml
crates/nicecli-contract-tests/fixtures/auth-files/expected/: disabled-auth-file.json  gemini-web-token-response.json  list-response.json  models-response.json  patch-status-response.json  patched-auth-file.json  vertex-import-response.json
crates/nicecli-contract-tests/fixtures/auth-files/input/: codex-demo@example.com-team.json  patch-fields-request.json  patch-status-request.json
crates/nicecli-contract-tests/fixtures/oauth/expected/: anthropic-auth-url.json  anthropic-route-flow.json  antigravity-auth-url.json  antigravity-route-flow.json  callback-file.json  callback-not-pending.json  callback-provider-mismatch.json  callback-unknown-state.json  codex-auth-url.json  codex-route-flow.json  error.json  gemini-cli-auth-url.json  gemini-cli-route-flow.json  invalid-state.json  qwen-auth-url.json  qwen-route-flow.json  wait.json
crates/nicecli-contract-tests/fixtures/oauth/input/: callback-request.json
crates/nicecli-contract-tests/fixtures/provider-config/expected/: codex-api-key-response.json  oauth-excluded-models-response.json  oauth-model-alias-response.json  openai-compatibility-response.json
crates/nicecli-contract-tests/fixtures/public/: public-contract-inventory.json
crates/nicecli-contract-tests/fixtures/public/baseline/: root-response.json  v1-chat-completions-response.json  v1-chat-completions-stream.txt  v1-completions-response.json  v1-completions-stream.txt  v1-messages-count-tokens-response.json  (+28 more)
crates/nicecli-contract-tests/src/: auth_file_fixtures.rs  fixture_data.rs  lib.rs  normalization.rs  oauth_fixtures.rs  oauth_provider_flows.rs  provider_config_fixtures.rs  provider_import_fixtures.rs  quota_fixtures.rs  structure_guards.rs  test_support.rs
crates/nicecli-quota/: Cargo.toml
crates/nicecli-quota/src/: cache.rs  codex.rs  lib.rs  model.rs  normalize.rs  service.rs
crates/nicecli-runtime/: Cargo.toml
crates/nicecli-runtime/src/: antigravity.rs  auth_candidate.rs  auth_store.rs  claude.rs  codex.rs  conductor.rs  execution.rs  kimi.rs  lib.rs  qwen.rs  routing.rs  scheduler.rs
crates/nicecli-runtime/src/antigravity/: auth_state.rs  helpers.rs  request_body.rs  status.rs
crates/nicecli-runtime/src/codex/: helpers.rs
crates/nicecli-runtime/src/kimi/: helpers.rs
crates/nicecli-runtime/src/qwen/: auth_state.rs  helpers.rs  status.rs
(+131 files in other folders)
