[workspace]
resolver = "2"
members = [
  "crates/nicecli-auth",
  "crates/nicecli-backend",
  "crates/nicecli-config",
  "crates/nicecli-contract-tests",
  "crates/nicecli-models",
  "crates/nicecli-quota",
  "crates/nicecli-runtime",
]
exclude = ["apps/nicecli/src-tauri"]

[workspace.package]
version = "0.3.7"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
futures-util = "0.3"
home = "0.5"
jsonwebtoken = { version = "9", features = ["use_pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
url = "2.5"
yaml-edit = "0.2.1"
