[package]
name = "nicecli-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile = "3"
tokio.workspace = true
