[package]
name = "nicecli-quota"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
nicecli-auth = { path = "../nicecli-auth" }
nicecli-runtime = { path = "../nicecli-runtime" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
