[package]
name = "nicecli-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
nicecli-auth = { path = "../nicecli-auth" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile = "3"
tokio.workspace = true
